# aoc_2022

./: LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
GRI/: 5dec.py
src/aoc2022/: aoc2022.py  day1.ipynb  day1.md  day11.ipynb  day11.md  day12.ipynb  day12.md  day2.ipynb  day2.md  day3.ipynb  day3.md  day4.ipynb  day4.md  day5.ipynb  day5.md  day6.ipynb  day6.md  day7.ipynb  day7.md  day8.ipynb  day8.md  day9.ipynb  day9.md
src/aoc2022/helpers/: load_txt.py
