[metadata]
name = aoc2022
version = 0.1
author = MB28
author_email = mark.braithwaite@ricardo.com
description = Advent of Code 2022
long_description = file: README.md
long_description_content_type = text/markdown
url = https://rs-gitlab.stc.ricplc.com/Mark.Braithwaite/aoc2022
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Ricardo Internal
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5

[options.packages.find]
where = src

[pycodestyle]
ignore = E731